# small-model-harness

./: .gitignore  PLAN.md  README.md  pyproject.toml
.github/workflows/: codeql.yml
docs/: gemini-verification-report.md  harness-architecture.md  plugin-api-reference.md
hermes-plugin/: __init__.py  circuit_breaker.py  constrained_decode.py  context_budget.py  guardrails.py  loop_detector.py  output_validator.py  plugin.yaml  validator.py  verifier.py
mcp-server/: checkpoint_manager.py  confidence.py  context_commands.py  grammar_validator.py  package_validator.py  routing_commands.py  server.py  token_verifier.py  value_regularizer.py  verification.py
skill/: SKILL.md
skill/references/: mcp-server-reference.md  small-llm-landscape-analysis-2026.md
tests/: test_confidence.py  test_constrained_decode.py  test_context_rot.py  test_e2e_pipeline.py  test_grammar_validator.py  test_guardrails.py  test_output_validator.py  test_package_validator.py  test_token_verifier.py  test_value_regularizer.py  test_verification.py
